--- a/themes/WillWritingPartnership/pages/user.htm
+++ b/themes/WillWritingPartnership/pages/user.htm
@@ -20,18 +20,35 @@ redirect = "home"
 </div>
 
 <hr>
+<section class="section-padding">
+    <div class="container">
+        <h3>Account Details</h3>
 
-<div class="container">
-    <h3>Account Details</h3>
+        <p>This is a demo of the user area, this can contain anything you like.</p>
+        <h3>Online Will</h3>
+        <p>Create your DIY will</p>
+        <a href="{{ 'createwill'|page }}" ><button  class="btn btn-primary">Start DIY Will</button></a>
+    </div>
+</section>
+<section class="section-padding">
+    <div class="container ">
+        <form action="user">
+            <div class="form-group">
+                <label>Mobile Number</label>
+                <input type="tel" id="mobile" name="mobile" class="form-control" placeholder="Mobile Number" />
+                <button type="submit">Sick</button>
+            </div>
+        </form>
+    </div>
+</section>
+<section class="section-padding">
+    <div class="container">
+        <a data-request="onLogout" data-request-data="redirect: '/account'"><button  class="btn btn-primary">Sign out</button></a>
+    </div>
+</section>
 
-    <p>This is a demo of the user area, this can contain anything you like.</p>
-    <h3>Online Will</h3>
-    <p>Create your DIY will</p>
-    <a href="{{ 'createwill'|page }}" class="btn btn-primary btn-lg btn-bloc">Start DIY Will</a>
-
-</div>
-
-
-<div class="container">
-    <a data-request="onLogout" data-request-data="redirect: '/account'">Sign out</a>
-</div>
+<?php
+    if (isset($_POST['mobile'])) {
+        echo $_POST['mobile'];
+    }
+ ?>
