--- a/themes/WillWritingPartnership/pages/calc.htm
+++ b/themes/WillWritingPartnership/pages/calc.htm
@@ -27,12 +27,11 @@ layout = "default"
             $ans = $this['answer'];
             break;
         }
-       $result = pg_query($dbconn3,"INSERT INTO math (value) VALUES ($ans)");
+       $result = pg_query($dbconn3,"INSERT INTO Math (value) VALUES ($ans)");
     }
 ?>
 ==
 <h1>Hello</h1>
-
 <form class="form-inline" data-request="onTest" data-request-update="calcresult: '#result'">
     <input type="text" name="value1" value="" class="form-control" >
     <select name="operation" class="form-control">
